2008-04-26  Nestor Salceda  <nestor.salceda@gmail.com>

	* AvoidMessageChainsRule.cs: Implemented logic for detect chains created
	with local variables.  By the moment it's a bit constrained, only 5
	local variables and without reassignments.
	* Test/AvoidMessageChainsTest.cs: Added test for check chains created
	with local variables.

2008-04-26  Nestor Salceda  <nestor.salceda@gmail.com>
	
	* AvoidMessageChainsRule.cs: New.  First rule in the Rule Day :)
	* Test/AvoidMessageChainsTest.cs: New.  Tests for AvoidMessageChains
	rule.
	* Makefile.am: Added both to the build.

2008-04-23  Nestor Salceda  <nestor.salceda@gmail.com>
	
	* AvoidLongMethodsRule.cs: The C# compiler was optimized in order to
	reduce the number of instructions, and then this rule failed.  I have
	decremented the default MaxInstructions value, and all tests are passed
	successfully with the SVN HEAD and the 1.9 release.

2008-04-18  Nestor Salceda  <nestor.salceda@gmail.com>

	* AvoidLongParameterListsRule.cs: Implemented delegate checking.
	* Test/AvoidLongParameterListsRule.cs: Added tests for delegate special
	checking.

2008-04-18  Nestor Salceda  <nestor.salceda@gmail.com>

	* AvoidLongParameterListsRule.cs: Refactored to be a ITypeRule instead
	of IMethodRule.
	* Test/AvoidLongParameterListsRule.cs: Updated tests for the new
	refactoring and updated with the new Test utilites.
	* Makefile.am: Added the Test.Smells reference.

2008-04-14  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidLongParameterListsRule.cs: Handle constructors just like 
	methods.

2008-04-14  Nestor Salceda  <nestor.salceda@gmail.com>

	* CodeDuplicatedLocator.cs: Improved the defect reporting.  When the
	rule finds a code duplicated issue, put the current method in Location
	and the other part in the comments, and put it with its complete
	signature, not only with the method name. 

2008-04-08  Nestor Salceda  <nestor.salceda@gmail.com>

	* AvoidLargeClassesRule.cs, CodeDuplicatedLocator.cs,